[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/StartMenu.gd" type="Script" id=1]
[ext_resource path="res://Font.tres" type="DynamicFont" id=2]

[sub_resource type="AudioStreamGenerator" id=1]

[node name="StartMenu" type="Node2D"]
position = Vector2( 0.878204, -0.12162 )
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 319.0
margin_bottom = 180.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="ColorRect" parent="."]
margin_left = 110.596
margin_top = 17.8381
margin_right = 202.596
margin_bottom = 43.8381
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="StartButton"]
margin_left = 23.1896
margin_top = 6.54065
margin_right = 63.1896
margin_bottom = 20.5406
custom_fonts/font = ExtResource( 2 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadGame" type="ColorRect" parent="."]
margin_left = 111.785
margin_top = 64.2172
margin_right = 203.785
margin_bottom = 90.2172
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="LoadGame"]
margin_left = 3.73149
margin_top = 5.83364
margin_right = 90.7315
margin_bottom = 20.8336
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.996078, 0.996078, 0.996078, 1 )
text = "Load Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="ColorRect" parent="."]
margin_left = 111.785
margin_top = 117.137
margin_right = 203.785
margin_bottom = 143.137
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="Quit"]
margin_left = 25.1502
margin_top = 5.51556
margin_right = 73.1502
margin_bottom = 20.5156
custom_fonts/font = ExtResource( 2 )
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sfx" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 156.51, 77.4207 )
stream = SubResource( 1 )

[connection signal="finished" from="sfx" to="." method="_on_sfx_finished"]
